# bw-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
bw_assets/: Cargo.toml
bw_assets/src/: lib.rs  mpq.rs  tbl.rs
bw_assets/src/dat/: flingy.rs  image.rs  mod.rs  sprite.rs  sprites.rs  tech_data.rs  unit.rs  upgrade.rs  upgrades.rs  weapon.rs  weapons.rs
bw_assets/src/dat/unit/: mod.rs  unit_id.rs
bw_assets/src/map/: chk.rs  mod.rs
bw_assets/src/map/chk/: chunk_name.rs  controller.rs  dimensions.rs  file_format_version.rs  header.rs  mega_tile.rs  mod.rs  scenario_type.rs  side.rs  string_data.rs  tileset.rs  unit.rs
bw_assets/src/map/tileset/: cv5.rs  mod.rs  vf4.rs  vr4.rs  vx4.rs  wpe.rs
bw_assets/src/tileset/: cv5.rs  mod.rs  vf4.rs  vr4.rs  vx4.rs  wpe.rs
bw_bevy_assets/: Cargo.toml
bw_bevy_assets/src/: events.rs  io.rs  lib.rs  loader.rs
bw_bevy_assets/src/map/: mod.rs  texture.rs  tile_atlas.rs
bw_core/: Cargo.toml
bw_core/assets/: .gitignore
bw_core/assets/maps/: .gitignore
bw_core/assets/ui/: hud.ron
bw_core/config/: bindings.ron  display.ron
bw_core/src/: config.rs  controller.rs  lib.rs  main.rs
bw_core/src/graphics/: camera.rs
bw_core/src/graphics/tile/: mod.rs  resources.rs
bw_core/src/graphics/ui/: mod.rs  resources.rs
bw_core/src/graphics/ui/minimap/: entities.rs  mod.rs  systems.rs  textures.rs
bw_core/src/state/: gameplay.rs  match_loading.rs  mod.rs
bw_core/src/unit/: mod.rs  unit_id.rs
bw_game/: Cargo.toml
bw_game/config/: bw_config.ron
bw_game/src/: assets.rs  main.rs
bw_game/src/graphics/: camera.rs  mod.rs
bw_game/src/graphics/tile/: map.rs  mod.rs  resources.rs
bw_game/src/graphics/ui/: mod.rs  resources.rs
bw_game/src/graphics/ui/minimap/: components.rs  mod.rs  textures.rs
bw_game/src/state/: gameplay.rs  match_loading.rs  mod.rs
bw_rs/: Cargo.toml
bw_rs/assets/: .gitignore  bw-settings.ron
bw_rs/src/: main.rs  plugin.rs
bw_rs/src/asset/: io.rs  mod.rs  tbl.rs
bw_rs/src/asset/dat/: flingy.rs  image.rs  mod.rs  sprite.rs  tech_data.rs  upgrade.rs  weapon.rs
bw_rs/src/asset/dat/unit/: mod.rs
bw_tilemap/: Cargo.toml
bw_tilemap/src/: lib.rs  tilemap.rs
bw_tilemap/src/render/: mod.rs  tilemap.frag  tilemap.vert
