[package]
name = "bw_assets"
version = "0.1.0"
authors = ["Ryan <drdgvhbh@gmail.com>"]
edition = "2018"

[dependencies]
nom = "^5.1.2"
struple = "0.1.0"
num-derive = "0.3"
num-traits = "0.2"
derive_builder = "0.9.0"
snafu = "0.6.9"
ceres-mpq = { path = "../ceres-mpq" }
bw_core = { path = "../bw_core" }
maplit = "1.0.2"
rayon = "1.1"
boolinator = "2.4.0"

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan"]

[dev-dependencies]
spectral = "0.6.0"
byteorder = "^1.3.4"
rand = "0.7.3"
