[package]
name = "bw_assets"
version = "0.1.0"
authors = ["Ryan <drdgvhbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nom = "6"
derive_builder = "0.9.0"
ceres-mpq = { path = "../ceres-mpq" }
struple = "0.1.0"
num-derive = "0.3"
num-traits = "0.2"
image = "0.23.1"
boolinator = "2.4.0"

[dev-dependencies]
spectral = "0.6.0"
byteorder = "^1.3.4"
rand = "0.7.3"
