[package]
name = "bw-rs"
version = "0.1.0"
authors = ["Ryan <drdgvhbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "c32c78fc66be2a4a907784b2dcc552e7f9985f52" }
ceres-mpq = { path = "../ceres-mpq" }
bw_tilemap = { path = "../bw_tilemap" }
bw_bevy_assets = { path = "../bw_bevy_assets" }
anyhow = "1.0"
regex = "1.4.2"
serde = "1.0"
ron = "0.6.2"

[dev-dependencies]
spectral = "0.6.0"
byteorder = "^1.3.4"
rand = "0.7.3"

[features]
default = ["ui"]

ui = ["bw_bevy_assets/ui"]
